k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-management
  labels:
    name: hotel-management
    environment: base
